[package]
name = "novelist"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Martin Holzhauer <martin@holzhauer.eu>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rayon = "1.0"

gtk = "0.5.0"
gio = "0.5.0"

log = "0.4"
fern = "0.5"
chrono = "0.4"

[features]
default = ["gtk_3_20"]
gtk_3_20 = ["gtk/v3_20"]
