cargo-features = ["edition"]
[package]
name = "novelist-app"
version = "0.1.0"
authors = [ "Katharina Fey <kookie@spacekookie.de>", 
            "Martin Holzhauer <martin@holzhauer.eu>" ]
edition = "2018"

[dependencies]
novelist-core = { path = "../novelist-core" }
novelist-gtk = { path = "../novelist-gtk" }
clap = "2.0"